Enum "account_type" {
  "host"
  "student"
  "owner"
}

Enum "jobtype_status" {
  "pending"
  "approved"
  "rejected"
}

Table "Users" {
  "id" uuid [pk, not null]
  "account_type" account_type [not null]
  "first_name" varchar(255) [not null]
  "last_name" varchar(255) [not null]
  "email" varchar(64) [unique, not null]
  "password" text [not null]
  "activation_code" varchar(255) [unique]
  "bio" varchar(255)
  "hireable" bool [not null, default: false]
  "__created_at__" date [not null, default: `CURRENT_DATE`]
  "administrator" bool [not null, default: false]
  "phone" varchar(15)
  "profile_picture" text
  "cover_photo" text
  "username" varchar(16) [unique, not null]
  "location" varchar(255)
}

Table "JobTypes" {
  "id" int4 [pk, not null, increment]
  "name" varchar(255) [not null]
  "__created_at__" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
}

Table "Questions" {
  "id" int4 [pk, not null, increment]
  "jobs_id" uuid
  "content" varchar(255) [not null]
  "type" bool [not null]
  "draft" bool [not null]
  "__created_at__" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
}

Table "Jobs" {
  "id" uuid [pk, not null]
  "title" varchar(255) [not null]
  "min_rate" float4 [not null]
  "max_rate" float4 [not null]
  "description" text [not null]
  "job_type_id" int4
  "draft" bool [not null]
  "user_id" uuid
  "__created_at__" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
}

Table "JobApplications" {
  "id" uuid [pk, not null]
  "jobs_id" uuid
  "first_name" varchar(255) [not null]
  "last_name" varchar(255) [not null]
  "phone_number" varchar(15) [not null]
  "email_address" varchar(64) [not null]
  "resume_url" text [not null]
  "notice_period" int4 [not null]
  "draft" bool [not null]
  "user_id" uuid
  "status" jobtype_status [not null]
  "__created_at__" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
}

Table "JobQuestionResponses" {
  "id" int4 [pk, not null, increment]
  "questions_id" int4
  "job_application_id" uuid
  "content" varchar(512) [not null]
  "__created_at__" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
}

Table "UserSkills" {
  "id" int4 [pk, not null, increment]
  "user_id" uuid [not null]
  "name" varchar(64) [not null]
  "__created_at__" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
}

Table "UserSocialLinks" {
  "id" int4 [pk, not null, increment]
  "user_id" uuid [not null]
  "platform" varchar(32) [not null]
  "url" varchar(255) [not null]
  "__created_at__" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
}

Table "MediaPool" {
  "id" text [pk, not null, increment]
  "file" bytea
  "mime_type" varchar(64) [not null]
  "__created_at__" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
}

Table "Agenda" {
  "id" uuid [pk, not null, default: `uuid_generate_v4()`]
  "title" varchar(255) [not null]
  "subtitle" varchar(255)
  "body" text [not null]
  "start_time" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  "end_time" timestamptz [not null]
  "user_id" uuid [not null]
  "__created_at__" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
}

Table "AgendaEvents" {
  "id" uuid [pk, not null, default: `uuid_generate_v4()`]
  "agenda_id" uuid [not null]
  "title" varchar(255) [not null]
  "subtitle" varchar(255)
  "body" text [not null]
  "speaker_name" varchar(255)
  "start_time" timestamptz [not null]
  "end_time" timestamptz [not null]
  "__created_at__" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
}

Table "Groups" {
  "id" uuid [pk, not null, default: `uuid_generate_v4()`]
  "title" varchar(255) [not null]
  "agenda_id" uuid [not null]
  "__created_at__" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
}

Table "GroupMembers" {
  "id" uuid [pk, not null, default: `uuid_generate_v4()`]
  "group_id" uuid [not null]
  "user_id" uuid [not null]
  "__created_at__" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
}

Ref "agenda_userid_fk":"Users"."id" < "Agenda"."user_id"

Ref "agendaevents_agenda_id_fk":"Agenda"."id" < "AgendaEvents"."agenda_id"

Ref "groupmembers_group_id_fk":"Groups"."id" < "GroupMembers"."group_id"

Ref "groupmembers_user_id_fk":"Users"."id" < "GroupMembers"."user_id"

Ref "groups_agenda_id_fk":"Agenda"."id" < "Groups"."agenda_id"

Ref "JobApplications_jobs_id_Jobs_id_fk":"Jobs"."id" < "JobApplications"."jobs_id" [delete: cascade]

Ref "JobApplications_user_id_Users_id_fk":"Users"."id" < "JobApplications"."user_id" [delete: cascade]

Ref "JobQuestionResponses_job_application_id_JobApplications_id_fk":"JobApplications"."id" < "JobQuestionResponses"."job_application_id" [delete: cascade]

Ref "JobQuestionResponses_questions_id_Questions_id_fk":"Questions"."id" < "JobQuestionResponses"."questions_id" [delete: cascade]

Ref "Jobs_job_type_id_JobTypes_id_fk":"JobTypes"."id" < "Jobs"."job_type_id" [delete: cascade]

Ref "Jobs_user_id_Users_id_fk":"Users"."id" < "Jobs"."user_id" [delete: cascade]

Ref "Questions_jobs_id_Jobs_id_fk":"Jobs"."id" < "Questions"."jobs_id" [delete: cascade]

Ref "UserSkills_user_id_fk":"Users"."id" < "UserSkills"."user_id" [delete: cascade]

Ref "UserSocialLinks_user_id_fk":"Users"."id" < "UserSocialLinks"."user_id"

Table "drizzle"."__drizzle_migrations" {
  "id" int4 [pk, not null, increment]
  "hash" text [not null]
  "created_at" int8
}
